Closed #4 & #13 Implemented Authorization Roles and Tested in View

--- a/BlazorAuthenticationWeb/Components/Pages/TestAuthentication.razor
+++ b/BlazorAuthenticationWeb/Components/Pages/TestAuthentication.razor
@@ -2,7 +2,6 @@
 
 @inject AuthenticationStateProvider _authenticationStateProvider;
 @inject IServiceProvider _serviceProvider;
-@inject Handlers.RoleHandler _roleHandler;
 
 <PageTitle>TestAuthentication</PageTitle>
 
@@ -12,10 +11,7 @@
 {
     <div>
         <h1>Hello, @_userName</h1>
-    </div>
-
-    <div>
-        <button @onclick="async () => await MakeAdmin()">Make admin</button>
+        You are authenticated.
     </div>
 }
 else
@@ -27,7 +23,6 @@ else
 
 @code {
     private bool _isAuthenticated;
-    private bool _isAdmin;
     private string _userName;
 
     protected override async Task OnInitializedAsync()
@@ -40,16 +35,7 @@ else
 
         _userName = user.Identity.Name;
         _isAuthenticated = user.Identity.IsAuthenticated;
-        _isAdmin = user.IsInRole("Admin");
-
-        if (_isAuthenticated)
-            await _roleHandler.CreateUserRolesAsync(user.Identity.Name, "Admin", _serviceProvider);
-    }
-
-    public async Task MakeAdmin()
-    {
-        // var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
-        // var user = authState.User;
-        // await _roleHandler.CreateUserRoles(_userName,"ADMIN",_serviceProvider);
     }
 }
+
+
