--- a/BlazorAuthenticationWeb/Components/Layout/NavMenu.razor
+++ b/BlazorAuthenticationWeb/Components/Layout/NavMenu.razor
@@ -19,6 +19,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="makeadmin">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Make Me Admin
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="testauth">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Test Authentication
             </NavLink>
