--- a/BlazorAuthenticationWeb/Components/Layout/NavMenu.razor
+++ b/BlazorAuthenticationWeb/Components/Layout/NavMenu.razor
@@ -37,8 +37,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="savefile">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Save File
             </NavLink>
         </div>
 
